# api_report_writer

./: .gitignore  README.md  api.py  deployment.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yaml
app/: Dockerfile  Makefile  api.py  pyproject.toml
infrastructure/terraform/: main.tf
static/: home.html
